# serializer version: 1
# name: test_setup[light.dali_line_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dali_line_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'be37ca9c47c24498a38bc62c7c711840-line0',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.dali_line_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'DALI Line 0',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dali_line_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[light.dali_line_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dali_line_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'be37ca9c47c24498a38bc62c7c711840-line1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.dali_line_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.ASSUMED_STATE: 'assumed_state'>: True,
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'DALI Line 1',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dali_line_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[light.device_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.device_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'be37ca9c47c24498a38bc62c7c711840-device1',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.device_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 1',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.device_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup[light.device_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.device_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'be37ca9c47c24498a38bc62c7c711840-device2',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.device_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 2',
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.device_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup[light.device_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 10000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1000,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.device_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'be37ca9c47c24498a38bc62c7c711840-device3',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.device_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 3',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 10000,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 1000,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.device_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup[light.device_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.device_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'be37ca9c47c24498a38bc62c7c711840-device4',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.device_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 4',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.device_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_setup[light.device_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.device_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'lunatone',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'be37ca9c47c24498a38bc62c7c711840-device5',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[light.device_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: None,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Device 5',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: None,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: None,
      <LightEntityStateAttribute.RGBW_COLOR: 'rgbw_color'>: None,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGBW: 'rgbw'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'light.device_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
